Name:               uri-encode
Version:            1.4
Description:        Unicode aware uri-encoding.
Synopsis:           Unicode aware uri-encoding.
Cabal-version:      >= 1.8
Category:           Network, Web
Author:             Sebastiaan Visser
Maintainer:         code@silk.co
License:            OtherLicense
License-File:       LICENSE
Build-Type:         Simple

Flag tools
  Default: False

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*
                  , bytestring >= 0.9 && < 0.11
                  , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.5)
                  , text >=0.7 && < 0.12
                  , utf8-string ==0.3.*

  Exposed-Modules: Network.URI.Encode


Executable          uri-encode
  if flag(tools)
    Buildable:      True
    Build-Depends:    base ==4.*
                    , bytestring >= 0.9 && < 0.11
                    , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.5)
                    , text >=0.7 && < 0.12
                    , utf8-string ==0.3.*
  else
    Buildable:      False
  Main-is:          URIEncode.hs
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

Executable          uri-decode
  if flag(tools)
    Buildable:      True
    Build-Depends:    base ==4.*
                    , bytestring >= 0.9 && < 0.11
                    , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.5)
                    , text >=0.7 && < 0.12
                    , utf8-string ==0.3.*
  else
    Buildable:      False
  Main-is:          URIDecode.hs
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

