name:                uri-encode
version:             1.5.0.2
description:         Unicode aware uri-encoding.
synopsis:            Unicode aware uri-encoding.
cabal-version:       >= 1.8
category:            Network, Web
author:              Silk
maintainer:          code@silk.co
license:             OtherLicense
license-file:        LICENSE
build-type:          Simple

extra-source-files:
  LICENSE
  README.md

flag tools
  default: False

source-repository head
  type:              git
  location:          https://github.com/silkapp/uri-encode.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Network.URI.Encode
  build-depends:
      base == 4.*
    , bytestring >= 0.9 && < 0.11
    , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.6)
    , text >=0.7 && < 1.2
    , utf8-string ==0.3.*

executable uri-encode
  main-is:           URIEncode.hs
  ghc-options:       -Wall
  hs-source-dirs:    src
  if flag(tools)
    buildable:       True
    build-depends:
        base == 4.*
      , bytestring >= 0.9 && < 0.11
      , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.6)
      , text >= 0.7 && < 1.2
      , utf8-string == 0.3.*
  else
    buildable:      False

executable uri-decode
  main-is:           URIDecode.hs
  ghc-options:       -Wall
  hs-source-dirs:    src
  if flag(tools)
    buildable:       True
    build-depends:
        base == 4.*
      , bytestring >= 0.9 && < 0.11
      , network (>= 2.2 && < 2.4.1.0) || (> 2.4.1.0 && < 2.6)
      , text >= 0.7 && < 1.2
      , utf8-string == 0.3.*
  else
    buildable:       False
